<resources>
    <string name="app_name">Crime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DataPicker_Title"></string>
    <string name="menu_add_item_crime">Add Crime
    </string>
    <string name="subtitle_item_show">Show subtitle</string>
    <string name="subtitle_item_hide">Hide subtitle</string>
    <string name="menu_iteme_remove_crime">Remove</string>
    <string name="no_crime_is_available">No Crime Is Available !!!</string>
    <string name="multiple_remove_crimes">Remove Crimes</string>
    <string name="select_all">Select All</string>
    <string name="unselect_all">UnSelect All</string>
    <string name="login_txt">Do you have account for login?</string>
    <string name="make_account">No account yet? Create one</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGNUP</string>
    <string name="Sign_Up_User_Name">Enter UserName for signUp</string>
    <string name="Sign_Up_Pass_Word">Enter Password for signUp</string>
    <string name="login_username">Enter UserName for Login</string>
    <string name="login_password">Enter PassWord for Login</string>

    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>

    <string name="crime_report">%1$s!
        the crime was discovered on %2$s.%3$s , and %4$s
    </string>

    <string name="crime_report_solved">the case is solved</string>
    <string name="crime_report_unsolved">the case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report </string>
    <string name="send_report">send crime report via</string>

</resources>