<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/meu_item_add_crime"
        android:icon="@drawable/ic_plus"
        android:title="@string/menu_add_item_crime"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_item_subtitle_crime"
        android:title="@string/subtitle_item_show"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/remove_multiple_Crime"
        android:icon="@drawable/ic_delete"
        android:title="@string/multiple_remove_crimes"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/menu_sselect_all"
        android:title="@string/select_all" />
    <item
        android:id="@+id/menu_unselect_all"
        android:title="@string/unselect_all" />
</menu>